--- a/dev/src/main/resources/application.properties
+++ b/dev/src/main/resources/application.properties
@@ -1,15 +1,26 @@
 server.port=9090
 spring.profiles.active=test
 ##http配置(默认模式，可不填)##
-spring.rest.config.maxTotal=200
-spring.rest.config.maxPreRoute=200
-spring.rest.config.socketTimeout=8000
-spring.rest.config.connectionTimeout=8000
-spring.rest.config.requestTimeout=6000
-spring.rest.config.strategy=detail
-spring.rest.config.queueType=memory
-server.context-path=/dev
+spring.rest.maxTotal=200
+spring.rest.maxPreRoute=200
+spring.rest.socketTimeout=8000
+spring.rest.connectionTimeout=8000
+spring.rest.requestTimeout=6000
+##http监控,false表示不监控，true开启监控
+spring.rest.metricsUse=true
+##http配置(默认模式，可不填)##
+spring.rest.strategy=local
+#http配置(默认模式，可不填),监控数据默认刷入本地队列。开启线程定时刷入磁盘文件
+spring.rest.queueType=memory
+##默认使用HttpClient(可不填),推荐使用okHttp3
+spring.rest.httpType=okHttp3
+
+##开启监控后，监控日志存储路径。需要确保有读写权限.若不填写该值，默认为/usr/http_position
+##集群中不同节点的监控依赖于分布式存储，可扩展相应逻辑
+spring.rest.position=/opt
 ##开启控制层命名检查,false或不填时不检查,生产环境不检查
-standar.method.check=true
-standar.method.ignore.list=UserController/login
-standar.ctrl.file.path=D:/
+dev.controller.method.check=true
+dev.controller.ignore.listt=UserController/login
+dev.controller.checkViewPath=D:/controller.check.json
+##开启默认返回值
+dev.res.default=true
