--- a/transfer/pom.xml
+++ b/transfer/pom.xml
@@ -15,13 +15,6 @@
         <spring.version>1.5.4.RELEASE</spring.version>
     </properties>
 
-    <developers>
-        <developer>
-            <id>chenjiajun</id>
-            <email>palading_cr@163.com</email>
-        </developer>
-    </developers>
-
     <!--<dependencyManagement>-->
     <!--<dependencies>-->
     <!--<dependency>-->
@@ -35,11 +28,11 @@
     <!--</dependencyManagement>-->
 
     <dependencies>
-        <!--<dependency>-->
-        <!--<groupId>org.springframework</groupId>-->
-        <!--<artifactId>spring-context</artifactId>-->
-        <!--<version>4.3.9.RELEASE</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.3.9.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
